<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtUser"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/valorUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorUser"
            android:maxLines="2"
            android:textSize="15dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtHighscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHighscore"
            android:textSize="15dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/valorListaHighscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorListaHighscore"
            android:maxLines="2"
            android:textSize="15dp"
            android:layout_margin="10dp"/>
    </LinearLayout>


</LinearLayout>