<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:fontFamily="casual"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnJugar"
        android:layout_below="@id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:background="@drawable/shape_boton"
        android:fontFamily="casual"
        android:onClick="clickJugar"/>

    <Button
        android:id="@+id/btnEstadisticas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnEstadisticas"
        android:layout_below="@id/btnJugar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:background="@drawable/shape_boton_claro"
        android:fontFamily="casual"
        android:onClick="clickPuntuaciones"/>


</RelativeLayout>